Tái cau truc giao diẹn theo SOLID (Phase 1 - completed)